<resources>
    <string name="app_name">StayFit</string>
    <string name="startButton">Начать!</string>
    <string name="startText">Начни свою транформацию \n прямо сейчас !</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="action_settings">Settings</string>
    <string name="Password">Пароль</string>
    <string name="mail">Введите почту</string>
    <string name="but_enter">Вход</string>
    <string name="but_registration">Регистрация</string>
    <string name="button">Button</string>
    <string name="reg">Заполните свои параметры,\n для подбора тренировки</string>
    <string name="add_mus">Набрать мышечную\nмассу</string>
    <string name="height">рост(см)</string>
    <string name="weight">вес(кг)</string>
    <string name="Save">Сохранить</string>
    <string name="title_activity_registration11">Registration11</string>
    <string name="repitpass">Повторите пароль</string>

</resources>
