<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myapplication.Registration2">

    <EditText
        android:id="@+id/name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="Имя"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/et_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_weight"
        android:layout_width="104dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="numberDecimal"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/et_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/et_height"
        android:layout_width="103dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/height"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/rb_exp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_weight"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/rb_aim"
        android:layout_width="335dp"
        android:layout_height="47dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/but_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb_exp"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/rb_loose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:onClick="onRadioButtonClicked"
            android:text="Скинуть вес        " />

        <RadioButton
            android:id="@+id/rb_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/add_mus" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/rb_exp"
        android:layout_width="335dp"
        android:layout_height="47dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/rb_aim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_height"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/rb_prof"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:onClick="onRadioButtonClicked"
            android:text="Профи" />

        <RadioButton
            android:id="@+id/rb_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="Новичек" />

    </RadioGroup>

    <Button
        android:id="@+id/but_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:backgroundTintMode="src_in"
        android:elevation="@dimen/activity_horizontal_margin"
        android:onClick="onClick"
        android:shadowColor="@color/common_google_signin_btn_text_dark_focused"
        android:shadowDx="@android:integer/config_longAnimTime"
        android:shadowDy="100"
        android:text="@string/Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb_aim" />

</android.support.constraint.ConstraintLayout>
