<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    tools:context=".Authorization">

    <EditText
        android:id="@+id/editTextemail"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/editTextPasswordRep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextemail"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editTextPasswordRep"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/repitpass"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegistration2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        tools:targetApi="o" />

    <Button
        android:id="@+id/buttonRegistration2"
        android:layout_width="137dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:backgroundTintMode="src_in"
        android:elevation="@dimen/activity_horizontal_margin"
        android:onClick="onClick"
        android:shadowColor="@color/common_google_signin_btn_text_dark_focused"
        android:shadowDx="@android:integer/config_longAnimTime"
        android:shadowDy="100"
        android:text="Далее"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRep" />

</android.support.constraint.ConstraintLayout>